switch to ems for better spacing and font sizes, fix targeting the widget body in case post classes have changed

--- a/scss/upw-theme-standard.scss
+++ b/scss/upw-theme-standard.scss
@@ -1,9 +1,9 @@
 .upw-posts {
 
-  .hentry {
+  article {
     display: block;
-    margin-bottom: 1.5rem;
-    padding-bottom: 1rem;
+    margin-bottom: 1.5em;
+    padding-bottom: 1em;
     border-bottom: 1px solid #ddd;
     &:last-child {
       border-bottom: 0;
@@ -12,7 +12,7 @@
   }
 
   .entry-title {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.5em;
     a {
       text-decoration: none;
       &:hover,
@@ -23,7 +23,7 @@
   }
 
   .entry-image {
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
     img {
       max-width: 100%;
       height: auto;
@@ -32,8 +32,8 @@
 
   .entry-meta {
     color: #888;
-    font-size: 0.9rem;
-    margin-bottom: 1rem;
+    font-size: 0.9em;
+    margin-bottom: 1em;
     line-height: 1.4;
     .comments {
       white-space: nowrap;
@@ -43,7 +43,7 @@
   .entry-summary,
   .entry-content {
     > :last-child {
-      margin-bottom: 1rem;
+      margin-bottom: 1em;
     }
   }
 
@@ -54,18 +54,18 @@
   footer {
     display: block;
     color: #888;
-    font-size: 0.9rem;
+    font-size: 0.9em;
     line-height: 1.4;
   }
 
   .entry-categories,
   .entry-tags,
   .entry-custom-fields {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.5em;
   }
 
   .custom-field {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.5em;
   }
 
 }
